# smart-client

./: .flake8  .gitignore  README.md  build.spec  main.py  mypy.ini  pyproject.toml
smart_client/: config.py  main.py
