[tool.poetry]
name = "smart-client"
version = "0.1.0"
description = "Klient til Smartarkivering.dk-submissions"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
Gooey = "^1.0.8"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
