[tool.poetry]
name = "smart-client"
version = "0.1.7"
description = "Klient til Smartarkivering.dk-submissions"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Gooey = "^1.0.8"
httpx = "^0.23.0"
pyinstaller = "^5.7.0"
dicttoxml = "^1.7.16"

[tool.poetry.scripts]
smart = "smart_client.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
