[project]
name = "smart-client"
version = "0.2.5"
description = "Klient til Smartarkivering.dk-afleveringer"
authors = [
    {name="Claus Juhl Knudsen", email="cjk@aarhus.dk"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "dicttoxml>=1.7.16",
    "gooey>=1.0.8.1",
    "httpx>=0.28.1",
    "pyinstaller>=6.16.0",
    "six>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
